[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
requires-poetry = "2.1.3"
name = "tests_api"
version = "0.0.0"
description = "A collective library containing tests for different APIs and tools for benchmarking"
authors = ["Krzysztof Mochocki"]
packages = [
    { include = "benchmarks" },
    { include = "validate_response" },
]


[tool.poetry.dependencies]
python = ">=3.14,<4"
prettytable = "3.8.0"
requests = "2.32.3"
types-requests = "2.31.0.2"
deepdiff = "6.3.0"
